# Baudrun

./: .editorconfig  .gitignore  .prettierignore  AI-USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  app.go  build.rs  deny.toml  flake.nix  go.mod  go.sum  index.html  main.go  mkdocs.yml  non-tauri-features.md  package-lock.json  package.json  package.nix  vite.config.ts  wails.json
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  highlight_pack.yml
.github/workflows/: after_release.yml  ci.yml  docs.yml  release.yml
docs/: ACCESSIBILITY.md  ADAPTERS.md  ADVANCED.md  INSTALL.md  PROFILES.md  REQUIREMENTS.md  SHORTCUTS.md  SKINS.md  THEMES.md  index.md  playground.html  screenshots.md
docs-next/: astro.config.mjs  package.json  pnpm-lock.yaml
docs-next/public/: playground.html  robots.txt
docs-next/public/examples/: highlight-pack.example.json  highlight-pack.example.md  profile.example.json  skin.example.json  skin.example.jsonc  syslog.example.json  theme.example.json
docs-next/scripts/: build-og-image.mjs  sync-changelog.mjs
docs-next/src/components/: Hero.astro  SocialIcons.astro
docs-next/src/content/docs/: 404.mdx  index.mdx  install.md
docs-next/src/content/docs/authoring/: highlighting.md  skins.md  themes.md  translations.md
docs-next/src/content/docs/reference/: accessibility.md  requirements.md  testing.md
docs-next/src/content/docs/usage/: adapters.md  advanced.md  profiles.md  screenshots.md  shortcuts.md
docs/examples/: skin.example.jsonc  syslog.example.md  theme.example.jsonc
frontend/: .prettierrc  index.html  package-lock.json  package.json  package.json.md5
frontend/src/: App.svelte  main.ts  style.css
frontend/src/lib/: PreviewTerminal.svelte  ProfileForm.svelte  Select.svelte  Settings.svelte  Sidebar.svelte  Terminal.svelte  api.ts  hexdump.ts  highlight.ts  shortcuts.ts
frontend/src/stores/: profiles.ts  session.ts  skins.ts  themes.ts
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/appdata/: appdata.go
internal/openpath/: openpath.go
internal/ostheme/: ostheme.go  ostheme_darwin.go  ostheme_darwin.m  ostheme_linux.go  ostheme_other.go  ostheme_windows.go
internal/profiles/: profiles.go
internal/serial/: chipsets.go  detect_common.go  direct.go  permissions.go  serial.go  usb.go  usb_darwin.go  usb_other.go  usb_windows.go
internal/settings/: settings.go
internal/skins/: builtins.go  skins.go
internal/themes/: builtins.go  parse.go  themes.go
internal/transfer/: transfer.go  xmodem.go  ymodem.go
internal/winconsole/: winconsole_other.go  winconsole_windows.go
locales/: README.md  en.yml  zh-CN.yml
packaging/arch/: PKGBUILD  README.md
packaging/linux/: 60-baudrun-serial.rules  baudrun-postinstall.sh  baudrun.desktop  seriesly.desktop
packaging/windows/winget/: README.md  packetThrower.Baudrun.installer.yaml.template  packetThrower.Baudrun.locale.en-US.yaml  packetThrower.Baudrun.yaml.template
packaging/windows/winget/rendered/0.12.0/: packetThrower.Baudrun.installer.yaml  packetThrower.Baudrun.yaml
packaging/windows/wix/: main.wxs
prototype/: Cargo.toml  README.md
prototype/resources/: Info.plist
prototype/resources/highlight/: cisco-ios.json  mikrotik-routeros.json
prototype/src/: app_view.rs  highlight_runtime.rs  main.rs  serial_io.rs  settings_view.rs  term_bridge.rs  terminal_grid.rs  terminal_view.rs
prototype/src/data/: events.rs  highlight.rs  profiles.rs  sanitize.rs  settings.rs  skins.rs
prototype/src/data/serial/: direct.rs  mod.rs  usb_other.rs
prototype/src/data/themes/: mod.rs  parse.rs
prototype/src/data/usbserial/: cp210x.rs
resources/: Info.plist  builtin_skins.json  builtin_themes.json  icon.rc
resources/highlight/: arista-eos.json  baudrun-default.json
resources/icons/: icon.icns
scripts/: README.md
scripts/dump-builtins/: main.go
scripts/transfer-tests/: Cargo.toml  README.md  regen-fixtures.sh
scripts/transfer-tests/src/: bridge.rs  hex_parse.rs  main.rs  port_reader.rs  tests.rs
scripts/virtual-serial/: Cargo.toml  README.md  TESTING.md  main.go
scripts/virtual-serial/src/: main.rs
src/: App.svelte  app_view.rs  highlight_runtime.rs  i18n.rs  main.rs  profiles_bus.rs  serial_io.rs  settings_bus.rs  settings_view.rs  skin_tokens.rs  term_bridge.rs  terminal_grid.rs  terminal_view.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: builtin_skins.json
src-tauri/resources/highlight/: aruba-cx.json  cisco-ios.json  junos.json
src-tauri/src/: appdata.rs  events.rs  highlight.rs  lib.rs  main.rs  profiles.rs  sanitize.rs  settings.rs  skins.rs  state.rs  transfer.rs
src-tauri/src/commands/: bootstrap.rs  highlight.rs  mod.rs  profiles.rs  serial.rs  settings.rs  skins.rs  themes.rs  transfer.rs  window.rs
src-tauri/src/serial/: chipsets.rs  detect.rs  direct.rs  mod.rs  session.rs  usb_darwin.rs  usb_windows.rs
src-tauri/src/themes/: mod.rs
src/app_view/: buttons.rs  chrome.rs  editor.rs  mod.rs  opts.rs  session.rs  transfer_ui.rs  window.rs
src/data/: appdata.rs  events.rs  hex.rs  highlight.rs  mod.rs  profiles.rs  settings.rs  skins.rs  state.rs  transfer.rs
src/data/serial/: chipsets.rs  detect.rs  direct.rs  mod.rs  ports.rs  session.rs  usb_darwin.rs  usb_windows.rs
src/data/themes/: mod.rs
src/data/usbserial/: cp210x.rs  mod.rs
src/lib/: KeyCapture.svelte  PreviewTerminal.svelte  ProfileForm.svelte  Select.svelte  Settings.svelte  Sidebar.svelte  Terminal.svelte  api.ts  highlight.ts  ports.ts  shortcuts.ts  updater.ts
src/settings_view/: chrome.rs  mod.rs  shortcuts.rs  theme_preview.rs
src/stores/: drivers.ts  highlight.ts  scanning.ts  skins.ts
test/: README.md
test/json/: README.md  baudrun-test-pack-bad-id.json  baudrun-test-pack-bad-json.json  baudrun-test-pack-good.json  baudrun-test-skin.json
test/transfers/: README.md  hex-1k.txt
(+2 files in other folders)
