[package]
name = "baudrun"
version = "0.0.1"
description = "Serial terminal for network engineers. alacritty_terminal + gpui."
authors = ["Will Lehnertz <6597817+packetThrower@users.noreply.github.com>"]
edition = "2021"
publish = false

# Bin name = the .app's CFBundleExecutable (and the macOS dev-mode
# dock tooltip / Cmd+Tab label / menu-bar app name for non-bundled
# `cargo run`). Capitalised so the menu bar shows "Baudrun" rather
# than the kebab-case package name when launched without a .app
# wrapper. The Cargo package name stays kebab-case as is conventional.
[[bin]]
name = "Baudrun"
path = "src/main.rs"

[dependencies]
# Zed's GPU-accelerated UI framework. Pinned to a specific
# zed-industries/zed commit (the gpui crate is a workspace member
# of that monorepo). Crates.io has a 0.2.2 of gpui from Feb 2026
# but Zed's source has months of changes since under the same
# version number, including a fixed `force_width` snap in
# `text_system::line_layout::apply_force_width_to_layout` that
# correctly distinguishes base vs combining glyphs (see Phase 0
# slice 5 commit message — the cell-width snap on 0.2.2 squeezed
# multi-glyph runs visibly). The pinned commit picks up that fix.
# Bump deliberately, not via `cargo update`, so we know what
# changed.
#
# No `rev` here: gpui-component's git tip pins gpui as
# `git = "..."` with no rev, and Cargo treats `git = "..."` and
# `git = "..." rev = "..."` as different sources even when they
# resolve to the same commit — duplicating the entire Zed crate
# graph. Matching the spec (no rev) lets Cargo unify them. Build
# reproducibility comes from `Cargo.lock` instead of the manifest:
# fresh checkouts use the locked commit, and bumping is an
# explicit `cargo update -p gpui` rather than passive drift.
gpui = { git = "https://github.com/zed-industries/zed" }

# Per-OS platform initialization for gpui. Was bundled inside the
# `gpui` crate up through the crates.io 0.2.x line; the Zed
# monorepo split it out as a separate workspace crate. Provides
# the convenience `application()` constructor (uses
# `MacPlatform`/`WindowsPlatform`/etc. under cfg gates) that
# replaces the old `Application::new()`.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }

# alacritty's VT escape parser + grid state. Not the renderer — the
# renderer is alacritty's own OpenGL code, which we deliberately do
# NOT pull in (gpui owns rendering). Used by Zed's terminal pane.
alacritty_terminal = "0.26"

# Logging — matches the main app's log dep choice so any code that
# eventually migrates from src-tauri lands without a rewrite.
log = "0.4"
env_logger = "0.11"

# Serial port I/O. Same major version (4.x) the main app uses so any
# code that gets promoted to the real tree later doesn't need
# revisiting. `serialport-rs` exposes a synchronous `Read`/`Write`
# API; we pump it on dedicated OS threads (see `serial_io.rs`).
serialport = "4"

# `flume` is a sync+async channel — its sync `send`/`recv` is used
# from the OS-thread side, and `recv_async` is awaited inside a gpui
# foreground task. Already a transitive dep of `gpui`; pinning it
# explicitly here keeps the dep graph honest.
flume = "0.11"

# gpui-component (Apache-2.0 / MIT, 60+ widgets) — Phase 2 needs
# `resizable`, `sidebar`, `list`, `form`, `input`, `select`,
# `dialog` etc., and re-implementing those from div primitives is
# weeks of work that already exists. Pinned to a specific git
# commit (currently 2d2524d8) — the published `gpui-component =
# "0.5.1"` on crates.io targets the gpui 0.2 crates.io line and
# would conflict with our Zed-git gpui pin. Their git tip pins
# gpui to `git = "https://github.com/zed-industries/zed"` with
# no rev; Cargo unifies both URL-matching gpui deps to our pinned
# rev so the resolution stays consistent.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "2d2524d89efc47270e9a0ee18f10fa72cd573eff" }

# --- Phase 1: data-layer dependencies ---
# These power the modules ported from src-tauri/src/ into
# prototype/src/data/. Versions match the main app's Cargo.toml
# 1:1 so anything that ports cleanly there ports cleanly here.
# Pure data / IO; none touch UI.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
plist = "1"             # for `.itermcolors` parsing in `data::themes::parse`
thiserror = "2"
anyhow = "1"
regex = "1"             # used by USB enumeration (parsing system_profiler /
                        # PowerShell output) and the highlight rule engine
aho-corasick = "1"      # multi-keyword search for `\b(?:foo|bar|...)\b` style
                        # rules in highlight packs — much faster than running
                        # the same patterns through the regex DFA when the
                        # pack carries dozens of keyword alternations (state
                        # words, STP roles, BGP states, etc.)
base64 = "0.22"
rusb = "0.9"            # libusb backend for the CP210x direct driver in
                        # `data::usbserial`

# macOS-only: set NSApplication's applicationIconImage at startup
# so the dock icon picks up `resources/icons/icon.png` even when
# running via `cargo run` (no .app bundle). Production builds will
# get the icon from the bundle's Info.plist + Resources/icon.icns,
# so this runtime override is dev-mode polish only. Versions match
# the transitive ones gpui_macos already pulls in to avoid bloating
# the dep graph.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSWorkspace", "NSAccessibility"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# cargo-packager bundler config. `cargo packager --release` reads
# this table, builds the release binary via `before-packaging-command`,
# wraps it into Baudrun.app using our hand-curated Info.plist + .icns,
# and (per `formats`) optionally produces a .dmg, .msi/.exe, .deb,
# .AppImage, or .pacman archive depending on host OS. The `--formats`
# CLI flag overrides this list for one-off local builds.
#
# Resources baked into the binary via `include_str!` (builtin_skins.json,
# builtin_themes.json, resources/highlight/*) deliberately aren't
# listed here — they ship inside the .text section of Baudrun, so
# copying them into Resources/ would be dead weight.
[package.metadata.packager]
product-name = "Baudrun"
identifier = "io.github.packetThrower.Baudrun"
category = "DeveloperTool"
copyright = "© 2025–2026 packetThrower / Baudrun contributors"
homepage = "https://packetthrower.github.io/Baudrun/"
authors = ["Will Lehnertz"]
publisher = "packetThrower"
description = "Serial terminal for network engineers. alacritty_terminal + gpui."
long-description = """
Baudrun is a cross-platform (macOS + Windows + Linux) serial terminal \
for network devices. Built for switch consoles, router CLIs, and other \
serial-attached gear. Profile-based: each device gets a named profile \
storing port, baud rate, framing, flow control, line ending, and \
optional send-on-connect sequences. One-click connect; no \
`screen /dev/cu.usbserial-...` from memory.\
"""
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.png", "resources/icons/icon.ico"]

[package.metadata.packager.macos]
# Reuse the hand-curated Info.plist from Phase 8 #6 instead of
# letting cargo-packager generate one from the table above —
# the existing plist carries LSMultipleInstancesProhibited (single-
# instance launch), NSHighResolutionCapable, and a stable
# CFBundleIdentifier the user's keychain already trusts from the
# Tauri build.
info-plist-path = "resources/Info.plist"
minimum-system-version = "11.0"
