[package]
name = "baudrun"
version = "0.12.4"
description = "Serial terminal for network engineers."
authors = ["Will Lehnertz <6597817+packetThrower@users.noreply.github.com>"]
edition = "2021"
publish = false
# Informational only since `publish = false` — never reaches
# crates.io's metadata. Declared so cargo-deny's license check
# (see deny.toml) doesn't have to special-case our own crate, and
# so package-metadata readers (`cargo pkgid --format-version 2`,
# IDE tooltips) get the right answer without consulting LICENSE.
license = "GPL-3.0-or-later"

# Bin name shows in the macOS menu bar / Cmd+Tab / dock on unbundled
# `cargo run`. Capitalised; the Cargo package name stays kebab-case.
[[bin]]
name = "Baudrun"
path = "src/main.rs"

[dependencies]
# Zed's UI framework. No `rev` here on purpose — gpui-component's
# git tip pins gpui as `git = "..."` with no rev, and Cargo only
# unifies two git deps when their specs match. With a rev pin we
# get a duplicated Zed crate graph. Reproducibility comes from
# Cargo.lock; bump with `cargo update -p gpui` deliberately.
gpui = { git = "https://github.com/zed-industries/zed" }

# Per-platform backend. The Linux wayland + x11 features are NOT
# default — without them, `gpui::guess_compositor()` returns
# "Wayland" inside any Wayland session but the matching arm in
# `gpui_linux/src/linux.rs` is cfg'd out, hitting `unreachable!()`
# before the first window paints.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland", "x11"] }

# VT parser + grid state only (NOT the renderer — gpui owns rendering).
alacritty_terminal = "0.26"

log = "0.4"
env_logger = "0.11"

# Serial port I/O. Sync API, pumped on dedicated OS threads — see
# serial_io.rs for the read / write loop.
serialport = "4"

# Sync+async channel. Sync `send`/`recv` from the OS-thread side,
# `recv_async` awaited inside gpui foreground tasks.
flume = "0.12"

# UI widget library. Pinned to a git rev because crates.io 0.5.1
# targets gpui 0.2 from crates.io and would conflict with our
# Zed-git gpui pin. Their git tip pins gpui to the Zed monorepo
# with no rev, so Cargo unifies it against ours.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b2472cd798422b05e2448d07aaab1550c21155f7" }

# Lucide icon SVGs. Without `.with_assets(Assets)` at startup, every
# `IconName::*` referenced by a gpui-component widget renders an
# empty rect (worst on Windows / Linux where `TitleBar` draws its
# own min / max / close from these). Same git rev as gpui-component
# so the icon set tracks the `IconName` enum.
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "b2472cd798422b05e2448d07aaab1550c21155f7" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
plist = "1"             # `.itermcolors` parsing in data::themes::parse
thiserror = "2"
regex = "1"
aho-corasick = "1"      # multi-keyword prefilter for highlight packs
                        # with dozens of `\b(?:foo|bar|…)\b` alternations

# Sync HTTP for the boot-time update check (src/updater.rs). ureq +
# rustls (already transitive via gpui), no tokio.
ureq = { version = "2", features = ["json", "tls"] }
semver = "1"

# libusb statically compiled. ~50 KB binary growth + ~10–15 s first
# build, bought back by zero runtime libusb dep on user machines
# and no install_name_tool rewrite for Homebrew's libusb on macOS.
rusb = { version = "0.9", features = ["vendored"] }

# macOS-only: set NSApplication's applicationIconImage at startup so
# the dock icon shows on unbundled `cargo run`. Release builds get
# the icon from the bundle's Info.plist + .icns instead.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSWorkspace", "NSAccessibility"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

# Embed Windows icon (resources/icon.rc) into Baudrun.exe's PE
# resource section. Auto-no-ops on non-Windows.
[build-dependencies]
embed-resource = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# cargo-packager bundler config. `cargo packager --release` builds via
# `before-packaging-command`, wraps the binary into Baudrun.app, and
# emits `.dmg` / `.msi` / `.deb` / `.AppImage` / `.pacman` per host OS.
[package.metadata.packager]
product-name = "Baudrun"
identifier = "io.github.packetThrower.Baudrun"
category = "DeveloperTool"
copyright = "© 2025–2026 packetThrower / Baudrun contributors"
homepage = "https://packetthrower.github.io/Baudrun/"
authors = ["Will Lehnertz"]
publisher = "packetThrower"
description = "Serial terminal for network engineers."
long-description = """
Baudrun is a cross-platform (macOS + Windows + Linux) serial terminal \
for network devices. Built for switch consoles, router CLIs, and other \
serial-attached gear. Profile-based: each device gets a named profile \
storing port, baud rate, framing, flow control, line ending, and \
optional send-on-connect sequences. One-click connect; no \
`screen /dev/cu.usbserial-...` from memory.\
"""
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.png", "resources/icons/icon.ico"]

[package.metadata.packager.deb]
# Runtime libs for the gpui_linux Wayland + X11 surface. Without an
# explicit `depends`, a fresh Ubuntu install fails to launch with
# `libxkbcommon-x11.so.0: cannot open shared object file`.
depends = [
  "libxkbcommon0",
  "libxkbcommon-x11-0",
  "libwayland-client0",
  "libwayland-cursor0",
  "libx11-6",
  "libxcb1",
  "libxcb-cursor0",
  "libxcb-randr0",
  "libxcb-render0",
  "libxcb-shape0",
  "libxcb-xfixes0",
  "libxcb-xkb1",
  "libfontconfig1",
  "libfreetype6",
  "libudev1",
]

# Extra files: udev rule (so /dev/ttyUSB* is accessible without the
# dialout-group dance) + .desktop entry (launcher discovery). udev
# rule needs a reload + USB replug to take effect — cargo-packager
# 0.11 doesn't expose postinst hooks, so users hit EACCES first and
# `friendly_open_error` in app_view.rs walks them through recovery.
files = { "packaging/linux/60-baudrun-serial.rules" = "/usr/lib/udev/rules.d/60-baudrun-serial.rules", "packaging/linux/baudrun.desktop" = "/usr/share/applications/baudrun.desktop", "resources/icons/icon.png" = "/usr/share/icons/hicolor/512x512/apps/baudrun.png" }

[package.metadata.packager.macos]
# Hand-curated Info.plist (LSMultipleInstancesProhibited for single-
# instance launch, NSHighResolutionCapable, stable CFBundleIdentifier
# the keychain already trusts from the Tauri build).
info-plist-path = "resources/Info.plist"
minimum-system-version = "11.0"
# Ad-hoc codesign the bundle. On arm64 the linker auto-signs the inner
# Mach-O; without bundle-level signing the result is inconsistent and
# Gatekeeper rejects it as "damaged and can't be opened" (regression
# we caught on v0.9.7). `-` is codesign's ad-hoc identity. Not
# notarized — first launch is still the "unidentified developer"
# right-click → Open path until an Apple Developer account lands.
signing-identity = "-"

# cargo-wix configuration for the per-arch .msi installer build.
# Picked up by `cargo wix` in release.yml on the Windows runners.
# `packaging/windows/wix/main.wxs` carries the full WiX source; this
# table only sets the build-time constants cargo-wix would otherwise
# auto-generate (and auto-regenerating the UpgradeCode would break
# version-to-version upgrades — Apps & Features would treat each
# build as an entirely new product instead of replacing the prior
# install).
#
# We use cargo-wix instead of cargo-packager's `-f wix` path because
# cargo-packager 0.11 bundles WiX 3.11 (2017) — predates `candle.exe
# -arch arm64` (WiX 3.14). cargo-wix relies on the system-installed
# WiX (release.yml installs WiX 3.14+ via choco) and so handles
# both architectures with the same toolchain.
[package.metadata.wix]
# Stable per-app. Mirrors the UpgradeCode in
# packaging/windows/wix/main.wxs — the two must agree or cargo-wix's
# own upgrade detection won't line up with the .msi's MajorUpgrade
# table. Never change once an installer has shipped with it.
upgrade-guid = "9F53E1BD-D65D-4B6A-9D85-F8DC39D1F937"
# Override cargo-wix's default `wix/`-at-repo-root discovery so the
# WiX source can live under `packaging/windows/`, alongside the
# Linux + Arch packaging files and the winget manifest scaffold.
# Keeps the repo's OS-grouped packaging tree consistent.
include = ["packaging/windows/wix/main.wxs"]
