[package]
name = "baudrun-prototype"
version = "0.0.1"
description = "Research spike: alacritty_terminal + gpui as a replacement for xterm.js + Tauri."
authors = ["Will Lehnertz <6597817+packetThrower@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
# Zed's GPU-accelerated UI framework. Pinned to a specific
# zed-industries/zed commit (the gpui crate is a workspace member
# of that monorepo). Crates.io has a 0.2.2 of gpui from Feb 2026
# but Zed's source has months of changes since under the same
# version number, including a fixed `force_width` snap in
# `text_system::line_layout::apply_force_width_to_layout` that
# correctly distinguishes base vs combining glyphs (see Phase 0
# slice 5 commit message — the cell-width snap on 0.2.2 squeezed
# multi-glyph runs visibly). The pinned commit picks up that fix.
# Bump deliberately, not via `cargo update`, so we know what
# changed.
gpui = { git = "https://github.com/zed-industries/zed", rev = "48db5261e658c972a8856ad739f81ac01ad43a2c" }

# Per-OS platform initialization for gpui. Was bundled inside the
# `gpui` crate up through the crates.io 0.2.x line; the Zed
# monorepo split it out as a separate workspace crate. Provides
# the convenience `application()` constructor (uses
# `MacPlatform`/`WindowsPlatform`/etc. under cfg gates) that
# replaces the old `Application::new()`.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "48db5261e658c972a8856ad739f81ac01ad43a2c", features = ["font-kit"] }

# alacritty's VT escape parser + grid state. Not the renderer — the
# renderer is alacritty's own OpenGL code, which we deliberately do
# NOT pull in (gpui owns rendering). Used by Zed's terminal pane.
alacritty_terminal = "0.26"

# Logging — matches the main app's log dep choice so any code that
# eventually migrates from src-tauri lands without a rewrite.
log = "0.4"
env_logger = "0.11"

# Serial port I/O. Same major version (4.x) the main app uses so any
# code that gets promoted to the real tree later doesn't need
# revisiting. `serialport-rs` exposes a synchronous `Read`/`Write`
# API; we pump it on dedicated OS threads (see `serial_io.rs`).
serialport = "4"

# `flume` is a sync+async channel — its sync `send`/`recv` is used
# from the OS-thread side, and `recv_async` is awaited inside a gpui
# foreground task. Already a transitive dep of `gpui`; pinning it
# explicitly here keeps the dep graph honest.
flume = "0.11"

# gpui-component (Apache-2.0 / MIT, 60+ widgets) was pulled in
# during Phase 0.5 against `gpui = "0.2"` from crates.io. After
# moving gpui to a Zed-git pin (the `force_width` snap fix needed
# for terminal-grid alignment), the published `gpui-component =
# "0.5.x"` would conflict — it targets the crates.io gpui line.
# Dropped for now; we don't use any of its widgets yet (Phase 0
# was all custom rendering). Re-add against gpui-component's git
# tip when we start Phase 2 (sidebar, profile form, etc.).

# --- Phase 1: data-layer dependencies ---
# These power the modules ported from src-tauri/src/ into
# prototype/src/data/. Versions match the main app's Cargo.toml
# 1:1 so anything that ports cleanly there ports cleanly here.
# Pure data / IO; none touch UI.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
plist = "1"             # for `.itermcolors` parsing in `data::themes::parse`
thiserror = "2"
anyhow = "1"
regex = "1"             # used by USB enumeration (parsing system_profiler /
                        # PowerShell output) and the highlight rule engine
base64 = "0.22"
rusb = "0.9"            # libusb backend for the CP210x direct driver in
                        # `data::usbserial`

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
