[package]
name = "baudrun"
version = "0.9.5"
description = "A serial terminal for network devices."
authors = ["Will Lehnertz <6597817+packetThrower@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "baudrun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# DevTools enabled for the alpha track so we can profile multi-window
# perf on Windows / Linux. Drop this feature before the next stable.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
plist = "1"
thiserror = "2"
anyhow = "1"
serialport = "4"
regex = "1"
base64 = "0.22"
log = "0.4"
rusb = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-decorum = "1"
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
